// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IntegrationListLimitAlert/> should not render 1`] = `null`;

exports[`<IntegrationListLimitAlert/> should render a warning message 1`] = `
<div
  class="d-inline-flex alert alert-warning fade"
  role="alert"
>
  <span
    class="d-flex align-items-center"
  >
    <i
      class="material-icons mr-2"
    >
      info
    </i>
    You have reached 
    1
    /
    2
     
    integrations. To add more, you must
    <a
      class="ml-1 mr-1"
      to="/app/settings/billing/plans"
    >
      upgrade
    </a>
    to a higher plan.
  </span>
</div>
`;

exports[`<IntegrationListLimitAlert/> should render an error message 1`] = `
<div
  class="d-inline-flex alert alert-danger fade"
  role="alert"
>
  <span
    class="d-flex align-items-center"
  >
    <i
      class="material-icons mr-2"
    >
      info
    </i>
    You have reached 
    2
    /
    2
     
    integrations. To add more, you must
    <a
      class="ml-1 mr-1"
      to="/app/settings/billing/plans"
    >
      upgrade
    </a>
    to a higher plan.
  </span>
</div>
`;
